--- a/basic_perceptron_gradient_descent.ipynb
+++ b/basic_perceptron_gradient_descent.ipynb
@@ -31,7 +31,7 @@
       },
       "source": [
         "# **Objectif pédagogique**\n",
-        "* Réaliser un réseau de nourones basique constitué d'un seul nourone pour la classification biniaire. \n",
+        "* Réaliser un réseau de neurones basique constitué d'un seul nourone pour la classification biniaire. \n",
         "* utiliser la fonction d'activation: sigmoid (fonction logistique)\n",
         "* mettre en oeuvre le gradient descent comme algorithme d'entrainement du perceptron.\n"
       ]
