--- a/Gradient_descent.ipynb
+++ b/Gradient_descent.ipynb
@@ -6,7 +6,7 @@
       "name": "Gradient_descent.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhmtFfx7H8DG69x6bZzG68",
+      "authorship_tag": "ABX9TyNwEeQTkIpd624S6y7UL1bs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "source": [
         "##<font color=\"red\">L'algorithme du Gradient: Gradient Descent </font>:\n",
         "<p>\n",
-        "Le gradient Descent est un algorithme itératif de minisation très populaire, particulièrement dans l'entrainement des réseaux de nourones artficiels. Toutefois, il faut souligner les éléments suivants:\n",
+        "Le gradient Descent est un algorithme itératif de minisation très populaire, particulièrement dans l'entrainement des réseaux de neurones artficiels. Toutefois, il faut souligner les éléments suivants:\n",
         "<p>\n",
         "\n",
         "* Il s'agit d'une **approche approximative** dont la solution obtenue dépend des hyperparamètres telques le nombre d'itérations et la précision souhaitée.\n",
@@ -129,18 +129,18 @@
         "def f(x):\n",
         "  return (x * x - x + 1)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bCZAPYTU-7pL",
-        "outputId": "ff19fe52-f44d-439f-9858-46411cf63498",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        }
+        },
+        "outputId": "ff19fe52-f44d-439f-9858-46411cf63498"
       },
       "source": [
         "#tracer la courbe de f\n",
@@ -150,7 +150,7 @@
         "y=f(x)\n",
         "plt.plot(x, y)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
         "      return None\n",
         "  return x"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
       "source": [
         "print(descente(f, df,100))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
