--- a/feature_scaling.ipynb
+++ b/feature_scaling.ipynb
@@ -62,7 +62,7 @@
         "id": "ax9mu-1a-iXB"
       },
       "source": [
-        "La classe MinMaxScaler transforme les caractéristiques (features) en adaptant chacune sur une plage donnée. La plage par défaut est: [-1 , 1]), mais il est possible de changer cette plage via les parametres feature_range=(min, max). La formule utilisé est la suivante:\n",
+        "La classe MinMaxScaler transforme les features en adaptant chacune sur une plage donnée. La plage par défaut est: [-1 , 1]), mais il est possible de changer cette plage via les parametres feature_range=(min, max). La formule utilisé est la suivante:\n",
         "<p>\n",
         "<font color=\"red\">\n",
         "$ X_{scaled}=\\frac{X-X_{min}}{X_{max}-X_{min}}  $ </font>\n",
