--- a/feature_scaling.ipynb
+++ b/feature_scaling.ipynb
@@ -20,7 +20,7 @@
         "id": "MT7pBHkn7AZD"
       },
       "source": [
-        "## <font color=\"blue\">Data Preprocessig:Feature Scaling</fon>\n",
+        "## <font color=\"blue\">Data Preprocessig:Feature Scaling</font>\n",
         "\n"
       ]
     },
