--- a/feature_scaling.ipynb
+++ b/feature_scaling.ipynb
@@ -185,7 +185,7 @@
         "id": "es8pZ3VlE4_D"
       },
       "source": [
-        "<font color=\"blue\" size=\"6\"> $ x_{scaled}=\\frac{x_i-\\bar{x} }{\\sigma} $ </Font>\n",
+        "<font color=\"blue\" size=\"6\"> $ x_{scaled}=\\frac{x_i-\\bar{x} }{\\sigma} $\n",
         "\n",
         "+ $ \\bar{x} $: est la moyenne de la série;\n",
         "+ $ \\sigma $: est son écart-type."
